force-app/main/default/objects/Quote/fields/NumberOfAccount__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAccount__c</fullName>
    <inlineHelpText>エンタープライズプランを選択する際、付与するアカウントの数をいれてください。</inlineHelpText>
    <label>アカウント数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>