force-app/main/default/objects/Quote/fields/QuoteApproval__c.field-meta.xml
<CustomField>
    <fullName>QuoteApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>見積承認</label>
    <type>Checkbox</type>
</CustomField>