force-app/main/default/objects/Quote/fields/QuoteApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>QuoteApprovalPattern__c</fullName>
    <description>見積品目の見積承認値のMAXをとって、GM決裁か部長決裁かを判断する</description>
    <label>見積承認パターン</label>
    <summarizedField>QuoteLineItem.QuoteApprovalPattern__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>