force-app/main/default/objects/Quote/fields/TotalAmountListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountListPrice__c</fullName>
    <label>合計金額（定価）</label>
    <summarizedField>QuoteLineItem.TotalAmountListPriceFormula__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>