force-app/main/default/objects/Quote/validationRules/QuoteApproval_True_Ischanged.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteApproval_True_Ischanged</fullName>
    <active>true</active>
    <errorConditionFormula>/*一時的に管理者も規則対象に変更_20240222*/
AND((QuoteApproval__c = true),
(OR(
ISCHANGED(Name),
ISCHANGED(Status),
ISCHANGED(TotalAmountListPrice__c),
ISCHANGED(DiscountAmount__c),
ISCHANGED(LineItemCount)
))
)

/*AND($User.ProfileId&lt;&gt;&apos;00e2w000004VA9p&apos;,(QuoteApproval__c = true),
(OR(
ISCHANGED(Name),
ISCHANGED(Status),
ISCHANGED(TotalAmountListPrice__c),
ISCHANGED(DiscountAmount__c),
ISCHANGED(LineItemCount)
))
)*/</errorConditionFormula>
    <errorMessage>見積承認後はレコードの編集はできません</errorMessage>
</ValidationRule>